--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "tailwindcss": "^3.3.2"
   }
 }
